<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseModeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/new_york"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="175dp"
            android:gravity="center_horizontal"
            android:text="@string/name_splash"
            android:textColor="@color/colorText"
            android:textSize="50sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:onClick="goToPassenger"
            android:text="@string/text_passenger"
            android:textColor="@color/colorText"
            android:textSize="20sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:onClick="goTODrive"
            android:text="@string/text_driver"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp" />
    </LinearLayout>

</FrameLayout>
