<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    style="?android:attr/buttonBarStyle"
    tools:context=".PassengerMapsActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/settings"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorText"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/settingsButton"
            android:textColor="@android:color/black"
            android:textSize="@dimen/standard_text_size" />

        <Button
            android:id="@+id/singOut"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorText"
            android:clickable="true"
            android:focusable="true"
            android:onClick="singOut"
            android:text="@string/singOut"
            android:textColor="@android:color/black"
            android:textSize="@dimen/standard_text_size" />

    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        tools:layout="@layout/activity_driver_maps" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/taxiButton"
        android:text="@string/bookTxi"
        android:textSize="@dimen/standard_text_size"
        android:textColor="@android:color/black"
        android:background="@color/colorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="?android:attr/buttonBarButtonStyle"
        android:clickable="true"
        android:focusable="true"
        android:onClick="bookTaxi"/>

</androidx.constraintlayout.widget.ConstraintLayout>
